--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>m2_zm - Profile</title>
+    <title>m2_zm</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body {
@@ -202,9 +202,9 @@
                 </div>
                 <div class="text-content">
                     <h1>I'm <span class="neon-text">m2_zm</span></h1>
-                    <div class="subtitle">Python / Node.js Developer</div>
+                    <div class="subtitle">Python / Node.js / C++ Developer</div>
                     <div class="profile-buttons">
-                        <a href="https://github.com/m2zm-1" class="profile-btn" target="_blank" aria-label="Github">
+                        <a href="https://github.com/m2zmforever" class="profile-btn" target="_blank" aria-label="Github">
                             <svg width="26" height="26" fill="none" viewBox="0 0 24 24"><path fill="#00ff88" d="M12 2C6.48 2 2 6.58 2 12.26c0 4.48 2.87 8.28 6.84 9.63.5.09.68-.22.68-.48 0-.24-.01-.87-.01-1.7-2.78.62-3.37-1.36-3.37-1.36-.45-1.18-1.1-1.5-1.1-1.5-.9-.63.07-.62.07-.62 1 .07 1.53 1.05 1.53 1.05.89 1.56 2.34 1.11 2.91.85.09-.66.35-1.11.63-1.37-2.22-.26-4.56-1.14-4.56-5.07 0-1.12.39-2.03 1.03-2.75-.1-.26-.45-1.3.1-2.7 0 0 .84-.28 2.75 1.05A9.38 9.38 0 0 1 12 6.84c.85.004 1.71.12 2.51.35 1.91-1.33 2.75-1.05 2.75-1.05.55 1.4.2 2.44.1 2.7.64.72 1.03 1.63 1.03 2.75 0 3.94-2.34 4.81-4.57 5.07.36.32.68.94.68 1.9 0 1.37-.01 2.47-.01 2.81 0 .27.18.58.69.48A10.01 10.01 0 0 0 22 12.26C22 6.58 17.52 2 12 2Z"/></svg>
                         </a>
                         <a href="https://discord.com/users/874969941583999037" class="profile-btn" target="_blank" aria-label="Discord">
